# Neptune-OS

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Neptune  README.md  boot.asm  bootl.asm  bootw.asm  build  build-release.sh  compile.sh  kernel.c  run  terminal.c  terminal.h
config/: kernel.json
lib/seqft/: common.c  common.h  evaluator.c  evaluator.h  main.c  stack.c  stack.h  tokenizer.c  tokenizer.h
src/: boot.asm  boot.c  kernel.c  terminal.c  terminal.h
src/programs/: calculator.c  calculator.h
